--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -5,6 +5,10 @@
 <title>Página Inicial</title>
 </head>
 <body>
-Página inicial do projeto
+Página inicial do projeto<br/><br/>
+
+<a href="lista.jsp">listagem (JSP)</a><br/>
+<a href="ServletLista">listagem (Servlet)</a><br/>
+<a href="cadastro.html">cadastro</a><br/>
 </body>
 </html>
