--- a/src/main/webapp/cadastro.html
+++ b/src/main/webapp/cadastro.html
@@ -9,7 +9,8 @@
 RE:<input type='text' name='re'/><br/>
 Nome:<input type='text' name='nome'/><br/>
 Data de Admissão (dd/mm/aaaa):<input type='text' name='dataAdm'/><br/>
-Salário<input type="text" name='salario'/><br/>
+Salário:<input type="text" name='salario'/><br/>
+e-mail:<input type="text" name='email'/><br/>
 <input type='submit' value='enviar'>
 </form>
 <br/>
