--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -9,6 +9,7 @@ Página inicial do projeto<br/><br/>
 
 <a href="lista.jsp">listagem (JSP)</a><br/>
 <a href="ServletLista">listagem (Servlet)</a><br/>
+<a href="lista-taglib.jsp">listagem (taglib)</a><br/>
 <a href="cadastro.html">cadastro</a><br/>
 <a href="alterar.html">alteração</a><br/>
 <a href="exclusao.html">exclusão</a><br/>
