--- a/src/main/webapp/exclusao.html
+++ b/src/main/webapp/exclusao.html
@@ -5,8 +5,9 @@
 <title>Exclusão</title>
 </head>
 <body>
-<form action="excluirFuncionario">
+<form action="mvc">
 RE:<input type='text' name='re'/><br/>
+<input type='hidden' name='logica' value='Excluir'/>
 <input type='submit' value='enviar'>
 </form>
 <br/>
